--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <form id="registroForm" class="col-md-8 needs-validation" novalidate>
                                 <div class="contenedor-inputs">
                                     <div class="">
-                                        <label for="nombre" class="form-label fw-bold">Nombre:</label>
+                                        <label for="nombre" class="form-label fw-bold text-align-start">Nombre:</label>
                                         <input type="text" class="form-control" name="nombre" id="nombre"
                                             placeholder="Tu Nombre" required>
                                         <span class="invalid-feedback">Debe colocar un Nombre</span>
@@ -227,7 +227,8 @@
                                     </div>
 
                                     <div class="">
-                                        <label for="apellido" class="form-label fw-bold">Apellido:</label>
+                                        <label for="apellido"
+                                            class="form-label fw-bold text-align-start">Apellido:</label>
                                         <input type="text" class="form-control" name="apellido" id="apellido"
                                             placeholder="Tu apellido" required>
                                         <span class="invalid-feedback">Debe colocar un Apellido</span>
@@ -235,7 +236,7 @@
                                     </div>
 
                                     <div class="">
-                                        <label for="email" class="form-label fw-bold">Email:</label>
+                                        <label for="email" class="form-label fw-bold text-align-start">Email:</label>
                                         <input required minlength="4" type="email" class="form-control" name="email"
                                             id="email" placeholder="Tu email">
                                         <span class="invalid-feedback">Debe colocar un Email</span>
@@ -243,7 +244,8 @@
                                     </div>
 
                                     <div class="">
-                                        <label for="telefono" class="form-label fw-bold">Teléfono:</label>
+                                        <label for="telefono"
+                                            class="form-label fw-bold text-align-start">Teléfono:</label>
                                         <input required type="tel" minlength="4" class="form-control" name="telefono"
                                             id="telefono" placeholder="Tu telefono">
                                         <span class="invalid-feedback">Debe colocar un teléfono</span>
