--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="./styles/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="./styles/styles2.css">
     <style>
         @media (min-width: 992px) {
             html.w-mod-js:not(.w-mod-ix) [data-w-id="7790c7f5-e606-0e16-7ece-290f34840e59"] {
@@ -859,7 +859,7 @@
                                             <span class="icono-faq">+</span>
                                         </div>
                                         <div class="faq-answer">
-                                            <div class="margin-bottom margin-small answer ">
+                                            <div class="margin-bottom margin-small answer">
                                                 <p>El costo de la inscripción incluye acceso a todas las conferencias y
                                                     actividades del evento, como la rifa patrocinada por Colgate, la
                                                     fiesta rompe hielos y la clausura. También cubre los recesos y la
