cambios  En  Img

--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="assets/Manuel-Lujan.jpg" loading="lazy" alt="Dr. Manuel Lujan"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="speaker-image" />
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
@@ -336,10 +335,9 @@
                                     </div>
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
-                                            <div class="w-100 speaker-image-wrapper">
-                                                <img src="assets/drOscar.png" loading="lazy" alt="Dr. Oscar Vizcarra"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="img-fluid speaker-image" />
+                                            <div class="speaker-image-wrapper">
+                                                <img src="assets/drOscar.png" loading="lazy" alt="Dr Oscar"
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Oscar Vizcarra</div>
@@ -364,9 +362,7 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790b852994b3e75d10fad_pexels-los-muertos-crew-10041258%20(1).jpg"
-                                                    loading="lazy" alt="Sarah Lee"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="speaker-image" />
+                                                    loading="lazy" alt="Sarah Lee" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
@@ -391,9 +387,7 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790c54ff3d62088f7a1cb_pexels-zen-chung-5745181%20(1).jpg"
-                                                    loading="lazy" alt="Mark Johnson"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="speaker-image" />
+                                                    loading="lazy" alt="Mark Johnson" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
@@ -418,9 +412,7 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790cdcf3068bdd2dd0fcf_pexels-karolina-grabowska-8528852%20(1).jpg"
-                                                    loading="lazy" alt="Jane Doe"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="speaker-image" />
+                                                    loading="lazy" alt="Jane Doe" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
@@ -445,9 +437,7 @@
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
                                                 <img src="https://assets.website-files.com/64463f5f0937fa590563c9a6/644790d78b0411b210bdc4d3_pexels-ketut-subiyanto-4963418%20(1).jpg"
-                                                    loading="lazy" alt="John Smith"
-                                                    sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, (max-width: 1439px) 30vw, 405.3359375px"
-                                                    class="speaker-image" />
+                                                    loading="lazy" alt="John Smith" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
